--- a/page4.html
+++ b/page4.html
@@ -8,13 +8,17 @@
     <title>My Website</title>
 </head>
 
-<header style="background-color: rgb(41, 143, 245);">
-    <h1 style="font-size: 50px; text-align: center">HTML Basics</h1>
-    <a href="https://glennnoronha.vercel.app/">My Portfolio</a> 
-    <a href="https://glennnoronha.vercel.app/">About Me</a> 
-    <a href="https://glennnoronha.vercel.app/">Contact Me</a> 
-    <br>
-    <br>
+<header>
+    <div  style="background-color: rgb(41, 143, 245); margin: 0px; padding: 0; width: 100%;">
+        <h1 class="header1" style="font-size: 50px; text-align: center;">HTML Basics</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html">About</a></li>
+                <li><a href="page3.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <body>
     <h1>Pagination</h1>
@@ -28,7 +32,7 @@
         <a href="page2.html">2</a>
         <a href="page3.html">3</a>
         <a href="page4.html" class="active">4</a>
-        <a href="index.html">></a>
+        <a href="index.html#scroll-target">></a>
     </div>
 
 
