--- a/page2.html
+++ b/page2.html
@@ -8,16 +8,20 @@
     <title>My Website</title>
 </head>
 
-<header style="background-color: rgb(41, 143, 245);">
-    <h1 style="font-size: 50px; text-align: center">HTML Basics</h1>
-    <a href="https://glennnoronha.vercel.app/">My Portfolio</a> 
-    <a href="https://glennnoronha.vercel.app/">About Me</a> 
-    <a href="https://glennnoronha.vercel.app/">Contact Me</a> 
-    <br>
-    <br>
+<header>
+    <div class="header1" style="background-color: rgb(41, 143, 245); margin: 0px; padding: 0; width: 100%;">
+        <h1 style="font-size: 50px; text-align: center; margin-top: 0;">HTML Basics</h1>
+        <nav class="navbar">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="page2.html">About</a></li>
+                <li><a href="page3.html">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <body>
-    <h1>Pagination</h1>
+    <h1>About</h1>
     
     <h2>This is page 2</h2>
     
