--- a/page2.html
+++ b/page2.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-1024.png">
+    <link rel="icon" type="image/jpg"
+        href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-1024.png">
     <link rel="stylesheet" href="styles.css">
     <title>My Website</title>
+    <script src="https://kit.fontawesome.com/2f516528df.js" crossorigin="anonymous"></script>
 </head>
 
-<header>
-    <div class="header1" style="background-color: rgb(41, 143, 245); margin: 0px; padding: 0; width: 100%;">
-        <h1 style="font-size: 50px; text-align: center; margin-top: 0;">HTML Basics</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">About</a></li>
-                <li><a href="page3.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+
 <body>
-    <h1>About</h1>
+    <header>
+        <h1>HTML Basics</h1>
+    </header>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">About</a></li>
+            <li><a href="page3.html">Contact</a></li>
+        </ul>
+    </nav>
     
     <h2>This is page 2</h2>
     
