--- a/page4.html
+++ b/page4.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/jpg" href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-1024.png">
+    <link rel="icon" type="image/jpg"
+        href="https://cdn4.iconfinder.com/data/icons/new-google-logo-2015/400/new-google-favicon-1024.png">
     <link rel="stylesheet" href="styles.css">
     <title>My Website</title>
+    <script src="https://kit.fontawesome.com/2f516528df.js" crossorigin="anonymous"></script>
 </head>
 
-<header>
-    <div  style="background-color: rgb(41, 143, 245); margin: 0px; padding: 0; width: 100%;">
-        <h1 class="header1" style="font-size: 50px; text-align: center;">HTML Basics</h1>
-        <nav class="navbar">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="page2.html">About</a></li>
-                <li><a href="page3.html">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+
 <body>
-    <h1>Pagination</h1>
+    <header>
+        <h1>HTML Basics</h1>
+    </header>
+
+    <nav class="navbar">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="page2.html">About</a></li>
+            <li><a href="page3.html">Contact</a></li>
+        </ul>
+    </nav>
     
     <h2>This is page 4</h2>
     
@@ -40,14 +41,25 @@
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </script>
-    </body>
 <footer style="background-color: rgb(41, 143, 245);">
-    <p>author: Glenn Noronha</p>
-    <p>&copy; 2025 Copyright Reserved</p>
-    <a href="https://glennnoronha.vercel.app/" target="_blank">My Portfolio</a> 
-    <a href="https://glennnoronha.vercel.app/" target="_blank">About Me</a> 
-    <a href="https://glennnoronha.vercel.app/" target="_blank">Contact Me</a>
-    <br>
-    <br>
-</footer>
+            <p style="padding-top: 10px;">Author: Glenn Noronha</p>
+            <p>&copy; 2025 Copyright Reserved</p>
+            <a href="https://glennnoronha.vercel.app/" target="_blank">My Portfolio</a>
+            <a href="https://glennnoronha.vercel.app/" target="_blank">About Me</a>
+            <a href="https://glennnoronha.vercel.app/" target="_blank">Contact Me</a>
+            <div class="icons2">
+                <a href="https://www.linkedin.com/in/glenn-noronha-314177161/" target="_blank">
+                    <i class="fa-brands fa-linkedin fa-2x"></i>
+                </a>
+                <a href="https://github.com/GlennNoronha" target="_blank">
+                    <i class="fa-brands fa-github fa-2x"></i>
+                </a>
+                <a href="https://x.com/glenn_noronha" target="_blank">
+                    <i class="fa-brands fa-x-twitter fa-2x"></i>
+                </a>
+        </div>
+            <br>
+            <br>
+        </footer>
+    </body>
 </html>
